--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,11 @@
 asgiref==3.2.7
+certifi==2020.4.5.1
 Django==3.0.6
 djangorestframework==3.11.0
+elasticsearch==7.7.0
+elasticsearch-dsl==7.2.0
+python-dateutil==2.8.1
 pytz==2020.1
+six==1.14.0
 sqlparse==0.3.1
+urllib3==1.25.9
