--- a/requirements.txt
+++ b/requirements.txt
@@ -1,11 +1,24 @@
 asgiref==3.2.7
+backcall==0.1.0
 certifi==2020.4.5.1
+decorator==4.4.2
 Django==3.0.6
 djangorestframework==3.11.0
 elasticsearch==7.7.0
 elasticsearch-dsl==7.2.0
+ipython==7.14.0
+ipython-genutils==0.2.0
+jedi==0.17.0
+parso==0.7.0
+pexpect==4.8.0
+pickleshare==0.7.5
+prompt-toolkit==3.0.5
+ptyprocess==0.6.0
+Pygments==2.6.1
 python-dateutil==2.8.1
 pytz==2020.1
 six==1.14.0
 sqlparse==0.3.1
+traitlets==4.3.3
 urllib3==1.25.9
+wcwidth==0.1.9
