--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,6 @@
 asgiref==3.2.7
+astroid==2.4.1
+attrs==19.3.0
 backcall==0.1.0
 certifi==2020.4.5.1
 decorator==4.4.2
@@ -6,19 +8,37 @@ Django==3.0.6
 djangorestframework==3.11.0
 elasticsearch==7.7.0
 elasticsearch-dsl==7.2.0
+importlib-metadata==1.6.0
 ipython==7.14.0
 ipython-genutils==0.2.0
+isort==4.3.21
 jedi==0.17.0
+lazy-object-proxy==1.4.3
+mccabe==0.6.1
+more-itertools==8.3.0
+packaging==20.4
 parso==0.7.0
 pexpect==4.8.0
 pickleshare==0.7.5
+pluggy==0.13.1
 prompt-toolkit==3.0.5
 ptyprocess==0.6.0
+py==1.8.1
 Pygments==2.6.1
+pylint==2.5.2
+pylint-django==2.0.15
+pylint-plugin-utils==0.6
+pyparsing==2.4.7
+pytest==5.4.3
+pytest-django==3.9.0
 python-dateutil==2.8.1
 pytz==2020.1
 six==1.14.0
 sqlparse==0.3.1
+toml==0.10.1
 traitlets==4.3.3
+typed-ast==1.4.1
 urllib3==1.25.9
 wcwidth==0.1.9
+wrapt==1.12.1
+zipp==3.1.0
