--- a/requirements.txt
+++ b/requirements.txt
@@ -16,7 +16,9 @@ jedi==0.17.0
 lazy-object-proxy==1.4.3
 mccabe==0.6.1
 more-itertools==8.3.0
+numpy==1.19.0
 packaging==20.4
+pandas==1.0.5
 parso==0.7.0
 pexpect==4.8.0
 pickleshare==0.7.5
