--- a/.pylintrc
+++ b/.pylintrc
@@ -14,7 +14,7 @@ ignore=migrations,wsgi.py,asgi.py,apps.py,bin,include,lib,share
 
 # Add files or directories matching the regex patterns to the blacklist. The
 # regex matches against base names, not paths.
-ignore-patterns=
+ignore-patterns=test_.*?py,__init__
 
 # Python code to execute, usually for sys.path manipulation such as
 # pygtk.require().
