--- a/.pylintrc
+++ b/.pylintrc
@@ -10,11 +10,11 @@ fail-under=10
 
 # Add files or directories to the blacklist. They should be base names, not
 # paths.
-ignore=migrations,wsgi.py,asgi.py,apps.py,bin,include,lib,share
+ignore=migrations,wsgi.py,asgi.py,apps.py,bin,include,lib,share,urls
 
 # Add files or directories matching the regex patterns to the blacklist. The
 # regex matches against base names, not paths.
-ignore-patterns=test_.*?py,__init__
+ignore-patterns=test_.*?py,__init__,conftest
 
 # Python code to execute, usually for sys.path manipulation such as
 # pygtk.require().
