--- a/.pylintrc
+++ b/.pylintrc
@@ -256,7 +256,7 @@ function-naming-style=snake_case
 #function-rgx=
 
 # Good variable names which should always be accepted, separated by a comma.
-good-names=i,j,k,ex,Run,_,qs,v,pk,q
+good-names=i,j,k,ex,Run,_,qs,v,pk,q,df
 
 # Good variable names regexes, separated by a comma. If names match any regex,
 # they will always be accepted
